Sticky navigation listo

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,13 +2,19 @@
   "name": "restaurant",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "js/main.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"dist/main.js\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "css",
       "videos",
       "js",
-      "js/vendor"
+      "js/vendor",
+      "dist"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
