--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,7 +10,6 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "css",
       "videos",
       "js",
       "js/vendor",
@@ -30,7 +29,7 @@
   },
   "imports": [],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
